# databricks-mcp

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  setup_codespaces.sh  test_setup_local.sh
.devcontainer/: devcontainer.json
databricks_mcp/api/: jobs.py  repos.py
databricks_mcp/core/: config.py
databricks_mcp/server/: databricks_mcp_server.py
scripts/: setup.sh  start_mcp_server.ps1
src/core/: config.py
tests/: test_jobs.py
